--- a/app-scr/src/app/shared/components/galeria/galeria.component.html
+++ b/app-scr/src/app/shared/components/galeria/galeria.component.html
@@ -6,7 +6,7 @@
                 <a class="nav-button next" (click)="nextImage()">&#10095;</a>
                 <fa-icon class="btn btn-sm btn-danger btn-Eliminar" [icon]="['fas', 'trash']" (click)=eliminarImagen(currentIndex)></fa-icon>
         } @else {
-            <img src="/imagenes/no-image.png" class="img-responsive">
+            <img src="/imagenes/no-image.jpg" class="img-responsive w-100">
         }
     </div>
 </div>
