--- a/app-scr/src/app/shared/components/webcam/webcam.component.html
+++ b/app-scr/src/app/shared/components/webcam/webcam.component.html
@@ -20,7 +20,7 @@
             @if(iCont > 0) {
                 <img [src]="fotografias[fotografias.length-1]" class="img-fluid">
             }@else {
-                <img src="/imagenes/no-image.png" class="img-fluid">
+                <img src="/imagenes/no-image.jpg" class="img-fluid">
             }
         </div>
         <div class="icon camera" (click)="capturarFoto()">
