--- a/app-scr/src/app/pages/bitacora-actividad/bitacora-actividad.component.scss
+++ b/app-scr/src/app/pages/bitacora-actividad/bitacora-actividad.component.scss
@@ -40,24 +40,16 @@
     display: flex;
     flex-direction: column;
     h2 {
-        color: var(--naranja-secundario) !important;
+        color: #F66605 !important;
         font-weight: 700 !important;
         font-size: 48px !important;
         line-height: 40px;
         z-index: 2;
     }
-    img {
-        position: absolute;
-        top: -80px;
-        left: -140px;
-        opacity: .8;
-        z-index: 1;
-    }
 }
 .subtitle {
     font-weight: 500;
     font-size: 24px;
-    max-width: 450px;
     color: var(--negro);
     z-index: 2;
     margin: 0px;
