--- a/app-scr/src/app/panel-admin/panel-admin.component.scss
+++ b/app-scr/src/app/panel-admin/panel-admin.component.scss
@@ -134,7 +134,7 @@
     background-image: url("../../../public/imagenes/bg-sidebar.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: -780px 0px;
   }
 
   .bg-dark {
@@ -144,7 +144,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(30, 34, 41, 0.562);
-    opacity: .5;
+    opacity: .7;
     z-index: 0;
   }
   
