--- a/app-scr/src/app/shared/components/galeria/galeria.component.html
+++ b/app-scr/src/app/shared/components/galeria/galeria.component.html
@@ -1,12 +1,25 @@
 <div class="carousel-container">
-    <div class="carousel">
-        @if(images.length > 0) {
-                <img [src]="images[currentIndex]" alt="Carousel Image" class="img-responsive">
-                <a class="nav-button prev" (click)="prevImage()">&#10094;</a>
-                <a class="nav-button next" (click)="nextImage()">&#10095;</a>
-                <fa-icon class="btn btn-sm btn-danger btn-Eliminar" [icon]="['fas', 'trash']" (click)=eliminarImagen(currentIndex)></fa-icon>
-        } @else {
-            <img src="/imagenes/no-image.jpg" class="img-responsive w-100">
-        }
-    </div>
+  <div class="carousel">
+    @if(images.length > 0) {
+    <img
+      [src]="
+        images[currentIndex] != undefined
+          ? images[currentIndex].url_path
+          : '/imagenes/no-image.jpg'
+      "
+      alt="Carousel Image"
+      class="img-responsive"
+    />
+    <a class="nav-button prev" (click)="prevImage()">&#10094;</a>
+    <a class="nav-button next" (click)="nextImage()">&#10095;</a>
+    @if(images[currentIndex] != undefined) {
+    <fa-icon
+      class="btn btn-sm btn-danger btn-Eliminar"
+      [icon]="['fas', 'trash']"
+      (click)="eliminarImagen(currentIndex)"
+    ></fa-icon>
+    } } @else {
+    <img src="/imagenes/no-image.jpg" class="img-responsive w-100" />
+    }
+  </div>
 </div>
