--- a/app-scr/src/styles.scss
+++ b/app-scr/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Forum&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
@@ -6,7 +5,7 @@ body {
     font-weight: 300;
     font-style: normal;
     font-size: 16px;
-    overflow: auto;
+    height: 100vh;
     /* Paleta de Colores */
     --principal: #162121;
     --secundario: #506465;
@@ -179,6 +178,7 @@ input:checked + .slider:before {
 .btn-flash-border-primary:hover {
     color: var(--link) !important;
 }
+
 @media only screen and (max-width: 575px){
     .text-secundario {
         font-size: 5px !important;
@@ -199,3 +199,5 @@ input:checked + .slider:before {
         transform: rotate(1turn);
     }
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
